--- a/src/styles/wheatherCard.styles.css
+++ b/src/styles/wheatherCard.styles.css
@@ -50,7 +50,7 @@
 }
 .details {
    background-color: rgba(44, 44, 44, 0.527);
-   height: 75%;
+   height: 70%;
    width: 70%;
 }
 .details > p {
@@ -66,7 +66,7 @@
    height: 100%;
 }
 .fas {
-   margin-right: 5px;
+   margin: 0 5px 0 5px;
 }
 
 .degrees {
