--- a/src/styles/wheatherCard.styles.css
+++ b/src/styles/wheatherCard.styles.css
@@ -6,9 +6,9 @@
 .card {
    background-color: rgba(53, 52, 52, 0.534);
    height: 75%;
-   width: 45%;
+   width: 85%;
    border-radius: 1rem;
-   padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+   padding: 0.5rem 0.5rem 0.5rem 0.5rem;
    backdrop-filter: blur(2px);
    color: rgb(241, 239, 236);
 }
@@ -38,7 +38,7 @@
    font-size: 15px;
 }
 .degrees > p {
-   font-size: 60px;
+   font-size: 40px;
 }
 .icon-weather {
    width: 40%;
@@ -50,8 +50,8 @@
 }
 .details {
    background-color: rgba(44, 44, 44, 0.527);
-   height: 70%;
-   width: 70%;
+   height: 65%;
+   width: 95%;
 }
 .details > p {
    margin-top: 0.5rem;
@@ -96,4 +96,35 @@
    border-radius: 3px;
    width: 6.5rem;
    height: 1.5rem;
+}
+@media screen and (min-width: 600px) {
+   .card {
+      height: 75%;
+      width: 65%;
+      padding: 0.5rem 1rem 0.5rem 1rem;
+   }
+   .degrees > p {
+      font-size: 55px;
+   }
+   .details {
+      background-color: rgba(44, 44, 44, 0.527);
+      height: 75%;
+      width: 80%;
+   }
+}
+
+@media screen and (min-width: 800px) {
+   .card {
+      height: 75%;
+      width: 50%;
+      padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+   }
+   .degrees > p {
+      font-size: 60px;
+   }
+   .details {
+      background-color: rgba(44, 44, 44, 0.527);
+      height: 75%;
+      width: 70%;
+   }
 }
